# learning-ocaml

./: .tool-versions  Makefile  README.md  pyproject.toml
.ipynb_checkpoints/: beginner_ocaml-checkpoint.ipynb
src/: .gitignore  hello.ml
